--- a/Exercises/Gewone CSS refactor naar BEM/index.html
+++ b/Exercises/Gewone CSS refactor naar BEM/index.html
@@ -26,7 +26,7 @@ https://www.tooplate.com/view/2122-nano-folio
 </head>
 <body class="container">
 <main>
-    <section class="card card--rose card--center">
+    <section class="card card--pink card--center">
         <i class="fas fa-heart fa-3x"></i>
         <h1 class="card__title">Nano Folio</h1>
     </section>
@@ -119,16 +119,16 @@ https://www.tooplate.com/view/2122-nano-folio
             <h2 class="contact__title">Contact</h2>
         </div>
         <div class="card__contact-part card__size-40">
-            <address class="tm-mb-30">
+            <address class="card__address">
                 120 Curabitur sed tortor ultrices,
                 congue odio eget, posuere urna.
                 Praesent at rhoncus 10680
             </address>
-            <div class="tm-text-white tm-mb-40">Tel: <a href="tel:0100200340" class="tm-link-white">010-020-0340</a></div>
-            <div class="tm-flex">
-                <a href="https://facebook.com" class="tm-social-link"><i class="fab fa-facebook"></i></a>
-                <a href="https://twitter.com" class="tm-social-link"><i class="fab fa-twitter"></i></a>
-                <a href="https://instagram.com" class="tm-social-link"><i class="fab fa-instagram"></i></a>
+            <div class="card__tel">Tel: <a href="tel:0100200340" class="card__tel-link">010-020-0340</a></div>
+            <div class="card__socials">
+                <a href="https://facebook.com" class="card__social-link"><i class="fab fa-facebook"></i></a>
+                <a href="https://twitter.com" class="card__social-link"><i class="fab fa-twitter"></i></a>
+                <a href="https://instagram.com" class="card__social-link"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
         <div class="card__contact-part card__size-40">
