--- a/Exercises/Gewone CSS refactor naar BEM/Nano Folio/index.html
+++ b/Exercises/Gewone CSS refactor naar BEM/Nano Folio/index.html
@@ -32,80 +32,80 @@ https://www.tooplate.com/view/2122-nano-folio
     </section>
 
     <section class="card card--blue card--bottom-spacing">
-        <div class="card__part card--center">
+        <div class="card__col card--center">
             <i class="fas fa-users fa-2x"></i>
             <h2>About Us</h2>
         </div>
-        <div class="card__part">
+        <div class="card__col">
             <p class="card__text">Nano Folio is simple HTML template with a minimal very light-weight custom CSS file. Max content width is 940 pixels. You can easily change the width or any part in this template. Gallery comes with a pop-up image and simple categories.</p>
             <p class="card__text">Please support Tooplate website by telling your friends about it. That is going to be very helpful for us. Feel free to <a class="card__link" rel="nofollow" href="https://www.tooplate.com/contact" target="_blank">message us</a> via email or live chat if you have anything to say.</p>
         </div>
     </section>
 
     <section class="wrapper">
-        <ul class="gallery-nav">
-            <li class="gallery-nav__item"><a href="#" data-filter=".city">City</a></li>
-            <li class="gallery-nav__item"><a href="#" data-filter=".nature">Nature</a></li>
-            <li class="gallery-nav__item"><a href="#" data-filter=".portraits">Portraits</a></li>
-            <li class="gallery-nav__item"><a href="#" class="active" data-filter="*">Show All</a></li>
+        <ul class="grid-nav">
+            <li class="grid-nav__item"><a href="#" data-filter=".city">City</a></li>
+            <li class="grid-nav__item"><a href="#" data-filter=".nature">Nature</a></li>
+            <li class="grid-nav__item"><a href="#" data-filter=".portraits">Portraits</a></li>
+            <li class="grid-nav__item"><a href="#" class="active" data-filter="*">Show All</a></li>
         </ul>
-        <ul class="gallery">
-            <li class="gallery-item city portraits">
+        <ul class="grid">
+            <li class="grid-item city portraits">
                 <a class="gallery__link" href="img/img-01.jpg">
                     <img class="gallery__image" src="img/tn-img-01.jpg" alt="City Scape"/>
                 </a>
             </li>
-            <li class="gallery-item portraits">
+            <li class="grid-item portraits">
                 <a class="gallery__link" href="img/img-02.jpg">
                     <img class="gallery__image" src="img/tn-img-02.jpg" alt="Beautiful Ladd"/>
                 </a>
             </li>
-            <li class="gallery-item city">
+            <li class="grid-item city">
                 <a class="gallery__link" href="img/img-03.jpg">
                     <img class="gallery__image" src="img/tn-img-03.jpg" alt="City over cloid"/>
                 </a>
             </li>
-            <li class="gallery-item nature">
+            <li class="grid-item nature">
                 <a class="gallery__link" href="img/img-04.jpg">
                     <img class="gallery__image" src="img/tn-img-04.jpg" alt="Autumn Forest"/>
                 </a>
             </li>
-            <li class="gallery-item city">
+            <li class="grid-item city">
                 <a class="gallery__link" href="img/img-05.jpg">
                     <img class="gallery__image" src="img/tn-img-05.jpg" alt="Skyscrapers Rmg-fluid"/>
                 </a>
             </li>
-            <li class="gallery-item city">
+            <li class="grid-item city">
                 <a class="gallery__link" href="img/img-06.jpg">
                     <img class="gallery__image" src="img/tn-img-06.jpg" alt="City Night"/>
                 </a>
             </li>
-            <li class="gallery-item nature portraits">
+            <li class="grid-item nature portraits">
                 <a class="gallery__link" href="img/img-07.jpg">
                     <img class="gallery__image" src="img/tn-img-07.jpg" alt="Gallery item"/>
                 </a>
             </li>
-            <li class="gallery-item nature">
-                <a class="gallery__link" href="img/img-08.jpg">
+            <li class="grid-item nature">
+                <a class="grid__link" href="img/img-08.jpg">
                     <img class="gallery__image" src="img/tn-img-08.jpg" alt="Gallery item"/>
                 </a>
             </li>
-            <li class="gallery-item nature">
+            <li class="grid-item nature">
                 <a class="gallery__link" href="img/img-09.jpg">
                     <img class="gallery__image" src="img/tn-img-09.jpg" alt="Gallery item"/>
                 </a>
             </li>
-            <li class="gallery-item nature portraits">
+            <li class="grid-item nature portraits">
                 <a class="gallery__link" href="img/img-10.jpg">
                     <img class="gallery__image" src="img/tn-img-10.jpg" alt="Gallery item"/>
                 </a>
             </li>
-            <li class="gallery-item nature">
+            <li class="grid-item nature">
                 <a class="gallery__link" href="img/img-11.jpg">
                     <img class="gallery__image" src="img/tn-img-11.jpg" alt="Gallery item"/>
                 </a>
             </li>
-            <li class="gallery-item portraits">
+            <li class="grid-item portraits">
                 <a class="gallery__link" href="img/img-12.jpg">
                     <img class="gallery__image" src="img/tn-img-12.jpg" alt="Gallery item"/>
                 </a>
@@ -113,12 +113,12 @@ https://www.tooplate.com/view/2122-nano-folio
         </ul>
     </section>
 
-    <section class="card card--light-blue card__contact">
-        <div class="card__contact-part card--center card__size-20">
+    <section class="card card--light-blue card--flex-col">
+        <div class="card__col--2x card--center card__col--20">
             <i class="fas fa-map-pin fa-3x"></i>
-            <h2 class="contact__title">Contact</h2>
+            <h2 class="card__title">Contact</h2>
         </div>
-        <div class="card__contact-part card__size-40">
+        <div class="card__col--2x card__col--40">
             <address class="card__address">
                 120 Curabitur sed tortor ultrices,
                 congue odio eget, posuere urna.
@@ -131,12 +131,12 @@ https://www.tooplate.com/view/2122-nano-folio
                 <a href="https://instagram.com" class="card__social-link"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
-        <div class="card__contact-part card__size-40">
-            <form id="contact-form" action="" method="POST" class="tm-contact-form">
-                <input class="contact__input" type="text" name="name" placeholder="name" required=""/>
-                <input class="contact__input" type="email" name="email" placeholder="email" required=""/>
-                <textarea class="contact__input" rows="5" name="message" placeholder="message" required=""></textarea>
-                <button type="submit" class="contact__submit">send</button>
+        <div class="card__col card__col--40">
+            <form id="form" action="" method="POST" class="form">
+                <input class="form__input" type="text" name="name" placeholder="name" required=""/>
+                <input class="form__input" type="email" name="email" placeholder="email" required=""/>
+                <textarea class="form__input" rows="5" name="message" placeholder="message" required=""></textarea>
+                <button type="submit" class="form__submit">send</button>
             </form>
         </div>
     </section>
