--- a/Exercises/Van Adobe XD naar HTML/HTML Project/index.html
+++ b/Exercises/Van Adobe XD naar HTML/HTML Project/index.html
@@ -280,33 +280,33 @@
 </main>
 
 <footer>
-    <nav>
-        <ul>
-            <li>
+    <nav class="footer">
+        <ul class="footer__list">
+            <li class="footer_list-item">
                 <button>
                     <img alt="Home / Discord Logo" src="">
                     <span>Home</span>
                 </button>
             </li>
-            <li>
+            <li class="footer_list-item">
                 <button>
                     <img alt="People" src="">
                     <span>Friends</span>
                 </button>
             </li>
-            <li>
+            <li class="footer_list-item">
                 <button>
                     <img alt="Magnifying Glass" src="">
                     <span>Search</span>
                 </button>
             </li>
-            <li>
+            <li class="footer_list-item">
                 <button>
                     <img alt="At symbol" src="">
                     <span>Mentions</span>
                 </button>
             </li>
-            <li>
+            <li class="footer_list-item">
                 <button>
                     <span>
                         <img alt="Your avatar" src="static/media/images/3.jpg">
